# SimplePipes

./: MANIFEST.in  README.md  setup.cfg
src/SimplePipes/: __init__.py  pipe.py  pipe.pyi  utils.py  utils.pyi
