[metadata]
name = SimplePipes
version = 1.0.3
description = Module enablig a sh like infix syntax (using pipes)
author = Oliver Sader
author_email = thunfisch987@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3
include_package_data = True
install_requires =

[options.packages.find]
where = src

